package main.kotlin.lexer

data class Position(
    var line: Int,
    var column: Int,
)
